--- a/chat.html
+++ b/chat.html
@@ -254,30 +254,23 @@
 <textarea id="userInput" placeholder="Votre réponse..." rows="1"></textarea>
       <button id="speechButton"><i class="fas fa-microphone"></i></button>
     </div>
-<div class="button-group">
-  <button id="sendBtn"><i class="fas fa-paper-plane"></i> Envoyer</button>
-  <button id="generateCoverBtn"><i class="fas fa-image"></i> Générer couverture</button>
-  <button id="generateBtn" disabled><i class="fas fa-book"></i> Générer livre</button>
-  <button id="saveButton"><i class="fas fa-save"></i> Sauvegarder</button>
-</div>
+    <div class="button-group">
+      <button id="sendBtn"><i class="fas fa-paper-plane"></i> Envoyer</button>
+  <button id="planBtn"><i class="fas fa-forward"></i> Générer plan</button>
+      <button id="generateBtn"><i class="fas fa-book"></i> Générer livre</button>
+      <button id="saveButton"><i class="fas fa-save"></i> Sauvegarder</button>
+    </div>
     <div id="waveform"></div>
     <div id="messageStatus"></div>
   </div>
 
   <script type="module">
-import { createClient } from 'https://esm.sh/@supabase/supabase-js';
+    import { createClient } from 'https://esm.sh/@supabase/supabase-js';
 
-const supabase = createClient(
-  'https://qgmxclxahaqnvvxhgcms.supabase.co',
-  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFnbXhjbHhhaHFudnhnY21zIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDM3OTYxODYsImV4cCI6MjA1OTM3MjE4Nn0.PhMpyFo9ZRgtLHdRyo6MXNjFNFy5WkH8LeqWnPJJCIE',
-  {
-    global: {
-      headers: {
-        Authorization: `Bearer ${localStorage.getItem('sb-access-token')}`
-      }
-    }
-  }
-);
+    const supabase = createClient(
+      'https://qgmxclxahaqnvvxhgcms.supabase.co',
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFnbXhjbHhhaGFxbnZ2eGhnY21zIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDM3OTYxODYsImV4cCI6MjA1OTM3MjE4Nn0.PhMpyFo9ZRgtLHdRyo6MXNjFNFy5WkH8LeqWnPJJCIE'
+    );
 
 let questions = [];
 let titreChapitres = {};
@@ -298,6 +291,37 @@ function miseAJourProgression() {
   const total = questions.length || 0;
   const current = questionIndex + 1;
   document.getElementById("progression").innerText = `Question ${current} / ${total}`;
+}
+async function genererPlan() {
+  const btn = document.getElementById("planBtn");
+  btn.disabled = true;
+  btn.innerHTML = `<i class="fas fa-spinner fa-spin"></i> Génération...`;
+
+  try {
+    const response = await fetch("https://lifebook-v2-1.onrender.com/api/plan", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ historique })
+    });
+
+    const data = await response.json();
+    console.log("Réponse plan:", data); // 🔍 debug
+
+    if (!data || !data.texte) throw new Error("Réponse invalide");
+
+    const markdown = data.texte.trim();
+    const html = marked.parse(markdown); // ✅ transformer en HTML pour affichage
+
+    afficher("Plan proposé", html, "bot");         // ✅ affichage visuel
+    historique.push({ role: "assistant", content: markdown }); // ✅ sauvegarde brut markdown
+
+  } catch (err) {
+    console.error("Erreur lors de la génération du plan:", err);
+    alert("Erreur lors de la génération du plan. Voir la console.");
+  } finally {
+    btn.disabled = false;
+    btn.innerHTML = `<i class="fas fa-forward"></i> Générer plan`;
+  }
 }
 async function sendMessage() {
   const input = document.getElementById("userInput");
@@ -329,32 +353,6 @@ async function sendMessage() {
   input.value = "";
   input.style.height = "auto";
 }
-  async function verifierCouverture() {
-  const { data: { session }, error } = await supabase.auth.getSession();
-  if (!session || error) {
-    console.log('⛔️ Pas de session utilisateur, pas de vérification de couverture.');
-    return; // Ne pas bloquer le reste du chat
-  }
-
-  interviewId = new URLSearchParams(window.location.search).get("id");
-
-  if (!interviewId) return;
-
-  const { data, error: coverError } = await supabase
-    .from('covers')
-    .select('id')
-    .eq('id', interviewId)
-    .single();
-
-  if (coverError) {
-    console.warn('Pas de couverture trouvée ou accès refusé (normal au début)');
-    return;
-  }
-
-  if (data) {
-    document.getElementById("generateBtn").disabled = false;
-  }
-}
 async function genererLivre() {
   if (!reponses || reponses.length < 4) {
     alert("⛔️ Pas assez de contenu pour générer un livre. Complétez plus de réponses.");
@@ -369,6 +367,9 @@ async function genererLivre() {
   const perso = new URLSearchParams(window.location.search).get("perso") || "il";
 
   try {
+    console.log("🚀 Étape 1 : Construction des segments...");
+
+    // ✅ Reconstruction automatique des segments à partir de reponses + sequenceParQuestion
     const segments = {};
     for (let i = 0; i < reponses.length; i++) {
       const seq = sequenceParQuestion?.[i]?.toString() || "1";
@@ -376,14 +377,20 @@ async function genererLivre() {
       if (reponses[i]?.trim()) segments[seq].push(reponses[i].trim());
     }
 
+    console.log("✅ Segments reconstruits :", segments);
+
     const payload = {
       segments,
       perso,
       questions,
       titreChapitres,
-      sequenceParQuestion
+      sequenceParQuestion // ✅ On l'envoie au backend pour cibler les bonnes questions
     };
 
+    console.log("📦 Payload envoyé au backend :", JSON.stringify(payload, null, 2));
+
+    // ✅ Envoi au backend
+    console.log("📤 Étape 2 : Envoi au backend...");
     const response = await fetch(`${API_BASE}/api/generer-livre`, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
@@ -396,12 +403,14 @@ async function genererLivre() {
     }
 
     const rawText = await response.text();
+    console.log("📦 Réponse brute reçue :", rawText.slice(0, 300));
+
     let data;
     try {
       data = JSON.parse(rawText);
     } catch (err) {
       console.error("❌ Erreur de parsing JSON :", err);
-      alert("⚠️ La réponse du serveur n’a pas pu être interprétée.");
+      alert("⚠️ La réponse du serveur n’a pas pu être interprétée. Regarde la console.");
       return;
     }
 
@@ -411,31 +420,23 @@ async function genererLivre() {
     }
 
     const texteFinal = data.texte.trim();
-
-    const coverData = await supabase
-      .from('covers')
-      .select('cover_base64')
-      .eq('id', interviewId)
-      .single();
-
-    if (!coverData?.data?.cover_base64) {
-      alert('Couverture manquante. Veuillez la générer avant de créer le livre.');
-      return;
-    }
+    console.log("🖨️ Étape 3 : Génération du PDF stylisé via backend...");
 
     const pdfResponse = await fetch(`${API_BASE}/api/exporter-pdf`, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ texte: texteFinal, cover_base64: coverData.data.cover_base64 })
+      body: JSON.stringify({ texte: texteFinal })
     });
 
     if (!pdfResponse.ok) {
+      console.error("❌ PDF non généré :", pdfResponse.status);
       alert("❌ Le serveur n’a pas réussi à générer le PDF.");
       return;
     }
 
     const blob = await pdfResponse.blob();
     const url = URL.createObjectURL(blob);
+
     const a = document.createElement("a");
     a.href = url;
     a.download = "LifeBook.pdf";
@@ -446,21 +447,17 @@ async function genererLivre() {
     alert("📘 Livre généré avec succès !");
   } catch (error) {
     console.error("❌ Erreur lors de la génération :", error);
-    alert("❌ Une erreur est survenue pendant la génération.");
+    alert("❌ Une erreur est survenue pendant la génération. Voir la console.");
   } finally {
     btn.disabled = false;
-    btn.innerHTML = `<i class="fas fa-book"></i> Générer livre`;
+    btn.innerHTML = `<i class="fas fa-book"></i> Générer`;
   }
 }
-async function sauvegarder() {
+    async function sauvegarder() {
   status.textContent = "⏳ Sauvegarde en cours...";
   status.style.color = "black";
 
   const { data: { session }, error } = await supabase.auth.getSession();
-  
-  console.log('👤 Session récupérée :', session); // <<< AJOUTÉ
-  console.log('🔑 user_id pour insert :', session?.user?.id); // <<< AJOUTÉ
-  
   if (!session || error) {
     status.textContent = "❌ Non connecté.";
     status.style.color = "red";
@@ -469,38 +466,39 @@ async function sauvegarder() {
 
   const user = session.user;
   let result;
+
   if (interviewId) {
     result = await supabase
       .from("responses")
       .update({ content: historique })
       .eq("id", interviewId);
   } else {
-    // 🔁 Récupère tous les paramètres de l’URL (sauf id)
-    const urlParams = new URLSearchParams(window.location.search);
-    const allParams = {};
-    for (const [key, value] of urlParams.entries()) {
-      if (key !== "id") allParams[key] = value;
-    }
-
-const accessToken = session.access_token;
+// 🔁 Récupère tous les paramètres de l’URL (sauf id)
+const urlParams = new URLSearchParams(window.location.search);
+const allParams = {};
+for (const [key, value] of urlParams.entries()) {
+  if (key !== "id") allParams[key] = value;
+}
 
 result = await supabase
   .from("responses")
-  .insert([{ user_id: user.id, content: historique, params: allParams }], {
-    headers: { Authorization: `Bearer ${accessToken}` }
-  })
+  .insert([{
+    user_id: user.id,
+    content: historique,
+    params: allParams // ✅ nouveau champ
+  }])
   .select("id")
   .single();
 
-    if (result.data?.id) {
-      interviewId = result.data.id;
+if (result.data?.id) {
+  interviewId = result.data.id;
 
-      const currentParams = new URLSearchParams(window.location.search);
-      currentParams.set("id", interviewId);
+  const currentParams = new URLSearchParams(window.location.search);
+  currentParams.set("id", interviewId);
 
-      const newUrl = `${window.location.pathname}?${currentParams.toString()}`;
-      history.replaceState(null, "", newUrl);
-    }
+  const newUrl = `${window.location.pathname}?${currentParams.toString()}`;
+  history.replaceState(null, "", newUrl);
+}
   }
 
   if (result.error) {
@@ -734,6 +732,12 @@ document.getElementById("sendBtn").addEventListener("click", sendMessage);
 document.getElementById("generateBtn").addEventListener("click", genererLivre);
 document.getElementById("saveButton").addEventListener("click", sauvegarder);
 document.getElementById("speechButton").addEventListener("click", toggleRecording);
+
+const planBtn = document.getElementById("planBtn");
+if (planBtn) {
+  planBtn.addEventListener("click", genererPlan);
+}
+
 document.getElementById("userInput").addEventListener("keypress", e => {
   if (e.key === "Enter") sendMessage();
 });
