--- a/chat.html
+++ b/chat.html
@@ -256,7 +256,7 @@
     </div>
     <div class="button-group">
       <button id="sendBtn"><i class="fas fa-paper-plane"></i> Envoyer</button>
-  <button id="planBtn"><i class="fas fa-forward"></i> Générer plan</button>
+      <button id="generateCoverBtn"><i class="fas fa-image"></i> Générer Couverture</button>
       <button id="generateBtn"><i class="fas fa-book"></i> Générer livre</button>
       <button id="saveButton"><i class="fas fa-save"></i> Sauvegarder</button>
     </div>
@@ -291,37 +291,6 @@ function miseAJourProgression() {
   const total = questions.length || 0;
   const current = questionIndex + 1;
   document.getElementById("progression").innerText = `Question ${current} / ${total}`;
-}
-async function genererPlan() {
-  const btn = document.getElementById("planBtn");
-  btn.disabled = true;
-  btn.innerHTML = `<i class="fas fa-spinner fa-spin"></i> Génération...`;
-
-  try {
-    const response = await fetch("https://lifebook-v2-1.onrender.com/api/plan", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ historique })
-    });
-
-    const data = await response.json();
-    console.log("Réponse plan:", data); // 🔍 debug
-
-    if (!data || !data.texte) throw new Error("Réponse invalide");
-
-    const markdown = data.texte.trim();
-    const html = marked.parse(markdown); // ✅ transformer en HTML pour affichage
-
-    afficher("Plan proposé", html, "bot");         // ✅ affichage visuel
-    historique.push({ role: "assistant", content: markdown }); // ✅ sauvegarde brut markdown
-
-  } catch (err) {
-    console.error("Erreur lors de la génération du plan:", err);
-    alert("Erreur lors de la génération du plan. Voir la console.");
-  } finally {
-    btn.disabled = false;
-    btn.innerHTML = `<i class="fas fa-forward"></i> Générer plan`;
-  }
 }
 async function sendMessage() {
   const input = document.getElementById("userInput");
@@ -733,11 +702,17 @@ document.getElementById("generateBtn").addEventListener("click", genererLivre);
 document.getElementById("saveButton").addEventListener("click", sauvegarder);
 document.getElementById("speechButton").addEventListener("click", toggleRecording);
 
-const planBtn = document.getElementById("planBtn");
-if (planBtn) {
-  planBtn.addEventListener("click", genererPlan);
-}
+document.getElementById("generateCoverBtn").addEventListener("click", () => {
+  const params = new URLSearchParams(window.location.search);
+  const interviewId = params.get('id');
 
+  if (!interviewId) {
+    alert("⛔️ Veuillez d'abord sauvegarder l'interview avant de générer la couverture.");
+    return;
+  }
+
+  window.location.href = `cover.html?id=${interviewId}`;
+});
 document.getElementById("userInput").addEventListener("keypress", e => {
   if (e.key === "Enter") sendMessage();
 });
