--- a/cover.html
+++ b/cover.html
@@ -30,7 +30,8 @@
       position: relative;
       width: 100%;
       height: 100%;
-      background: url('Sans titre (148 x 210 mm) (1).png') no-repeat center/cover;
+      background: url(background.src = 'https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2018%20avr.%202025%2C%2000_03_26.png';
+no-repeat center/cover;
     }
     .editable {
       position: absolute;
