--- a/cover.html
+++ b/cover.html
@@ -163,7 +163,7 @@ uploadInput.addEventListener('change', (e) => {
       cropBoxResizable: true,
       dragMode: 'move'
     });
-  }
+  };
   reader.readAsDataURL(file);
 });
 
@@ -174,13 +174,17 @@ document.addEventListener('keydown', (e) => {
 });
 
 async function finalizeCover() {
+  const finalizeBtn = document.getElementById('finalizeBtn');
+  finalizeBtn.disabled = true;
+  finalizeBtn.textContent = "⏳ Sauvegarde en cours...";
+
   const canvas = document.createElement('canvas');
   canvas.width = 1748;
   canvas.height = 2480;
   const ctx = canvas.getContext('2d');
 
   const background = new Image();
-  background.crossOrigin = "anonymous"; // important pour éviter erreurs CORS
+  background.crossOrigin = "anonymous";
   background.src = 'https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2018%20avr.%202025%2C%2000_03_26.png';
 
   background.onload = async () => {
@@ -194,13 +198,13 @@ async function finalizeCover() {
     ctx.font = 'bold 100px Georgia';
     ctx.fillStyle = '#333';
     ctx.textAlign = 'center';
-    ctx.fillText(document.getElementById('title').innerText, canvas.width/2, 250);
+    ctx.fillText(document.getElementById('title').innerText, canvas.width / 2, 250);
 
     ctx.font = 'italic 70px Georgia';
-    ctx.fillText(document.getElementById('subtitle').innerText, canvas.width/2, 400);
+    ctx.fillText(document.getElementById('subtitle').innerText, canvas.width / 2, 400);
 
     ctx.font = 'italic 80px Georgia';
-    ctx.fillText(document.getElementById('author').innerText, canvas.width/2, 2200);
+    ctx.fillText(document.getElementById('author').innerText, canvas.width / 2, 2200);
 
     ctx.font = 'bold 40px Arial';
     ctx.fillStyle = 'white';
@@ -213,22 +217,25 @@ async function finalizeCover() {
       .upsert([{ id: interviewId, cover_base64: coverBase64 }]);
 
     if (error) {
-      alert('❌ Erreur en sauvegardant la couverture');
+      finalizeBtn.textContent = "❌ Erreur sauvegarde";
+      finalizeBtn.disabled = false;
       console.error(error);
     } else {
-      alert('✅ Couverture sauvegardée ! Retour au livre...');
-      window.location.href = `chat.html?id=${interviewId}`;
+      finalizeBtn.textContent = "✅ Sauvegarde réussie";
+      setTimeout(() => {
+        window.location.href = `chat.html?id=${interviewId}`;
+      }, 1200);
     }
   };
 
   background.onerror = () => {
-    alert('❌ Impossible de charger l’image de fond !');
+    finalizeBtn.textContent = "❌ Erreur chargement fond";
+    finalizeBtn.disabled = false;
   };
 }
 
 document.getElementById('uploadBtn').addEventListener('click', triggerUpload);
 document.getElementById('finalizeBtn').addEventListener('click', finalizeCover);
-
 </script>
 
 </body>
