--- a/chat.html
+++ b/chat.html
@@ -338,7 +338,6 @@ async function genererLivre() {
   try {
     console.log("🚀 Étape 1 : Construction des segments...");
 
-    // ✅ Reconstruction automatique des segments à partir de reponses + sequenceParQuestion
     const segments = {};
     for (let i = 0; i < reponses.length; i++) {
       const seq = sequenceParQuestion?.[i]?.toString() || "1";
@@ -353,12 +352,11 @@ async function genererLivre() {
       perso,
       questions,
       titreChapitres,
-      sequenceParQuestion // ✅ On l'envoie au backend pour cibler les bonnes questions
+      sequenceParQuestion
     };
 
     console.log("📦 Payload envoyé au backend :", JSON.stringify(payload, null, 2));
 
-    // ✅ Envoi au backend
     console.log("📤 Étape 2 : Envoi au backend...");
     const response = await fetch(`${API_BASE}/api/generer-livre`, {
       method: "POST",
@@ -389,12 +387,41 @@ async function genererLivre() {
     }
 
     const texteFinal = data.texte.trim();
-    console.log("🖨️ Étape 3 : Génération du PDF stylisé via backend...");
+
+    console.log("🖨️ Étape 3 : Récupération de la couverture depuis Supabase...");
+
+    const { data: { session } } = await supabase.auth.getSession();
+    if (!session) {
+      alert('❌ Vous devez être connecté pour récupérer la couverture.');
+      return;
+    }
+
+    const interviewId = new URLSearchParams(window.location.search).get("id");
+
+    const { data: couvertureData, error } = await supabase
+      .from('covers')
+      .select('cover_base64')
+      .eq('id', interviewId)
+      .eq('user_id', session.user.id)
+      .single();
+
+    if (error || !couvertureData || !couvertureData.cover_base64) {
+      alert("❌ Erreur en récupérant la couverture depuis Supabase.");
+      console.error(error);
+      return;
+    }
+
+    console.log("✅ Couverture récupérée depuis Supabase.");
+
+    console.log("🖨️ Étape 4 : Génération du PDF stylisé avec couverture via backend...");
 
     const pdfResponse = await fetch(`${API_BASE}/api/exporter-pdf`, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ texte: texteFinal })
+      body: JSON.stringify({
+        texte: texteFinal,
+        couvertureBase64: couvertureData.cover_base64
+      })
     });
 
     if (!pdfResponse.ok) {
